# aoc

./: .gitignore  Cargo.toml  README.md  notes-2323d11  set-up.sh
src/: algorithims.rs  grid.rs  main.rs  util.rs
src/util/: grid.rs  grid_v1.rs  mod.rs  point.rs
src/y2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day2.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/y2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day24.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs
src/y2023/day7/: mod.rs  part1.rs  part2.rs
src/y2024/: day1.rs  day14.rs  day2.rs  day20.rs  day22.rs  day23.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
src/y2025/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
