[package]
name = "aoc-rs"
version = "0.1.0"
authors = ["awheeler294 <awheeler294@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.0"
md5 = "0.7.0"
memoize = "0.4.1"
pretty_assertions = "1.4.0"
regex = "1.7.0"
