[package]
name = "aoc-rs"
version = "0.1.0"
authors = ["awheeler294 <awheeler294@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.4.10", features = ["derive"] }
colored = "2.0.0"
log-update = "0.1.0"
md5 = "0.7.0"
memoize = "0.4.1"
# pathfinding = "4.6.0"
pretty_assertions = "1.4.0"
regex = "1.10.2"
z3 = "0.19.6"
